<resources>
    <string name="app_name">Mi Diario</string>
    <string name="title_login">Iniciar sesión</string>
    <string name="title_create_account">Crear cuenta</string>
    <string name="title_activity_login">Registrarse</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_terms_condicions">Términos y condiciones</string>
    <string name="title_forget_password">Recuperar</string>
    <string name="action_sign_in">Iniciar sesión</string>
    <string name="prompt_login_google">Login Google</string>
    <string name="action_create_account">Crear cuenta</string>
    <string name="tag_terms">He leído y acepto los términos de la aplicación</string>
    <string name="tag_message_selected">Comparte tus experiencias</string>
    <string name="tag_message_selected2">Retroalimenta a otros usuarios</string>
    <string name="tag_message_selected3">Aprende de las demás personas</string>
    <string name="tag_message_selected4">Conserva la información valiosa</string>
    <string name="tag_message_selected5">Consigna las ideas y momentos memorables</string>
    <string name="tag_message_selected6">Evita perder tus momentos importantes y significantes</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Contraseña</string>
    <string name="forget_password">¿Olvidó contraseña?</string>
    <string name="error_invalid_email">Este email es inválido</string>
    <string name="error_invalid_password">Esta contraseña es demasiado corta</string>
    <string name="error_incorrect_password">La contraseña es incorrecta</string>
    <string name="error_field_required">Campo requerido</string>
    <string name="open_profile">open profile</string>
    <string name="user_Login_entra">user Login entra</string>
    <string name="Success">Success</string>
    <string name="Failded">Verifique Email y/o Contraseña</string>
    <string name="my_preferences2">my_preferences2</string>
    <string name="login_complete">login_complete</string>
    <string name="prompt_name">Nombre</string>
    <string name="prompt_lastname">Apellidos</string>
    <string name="prompt_password_confirmar">Confirmar contraseña</string>
    <string name="prompt_user">Usuario</string>
    <string name="Terminos">Aceptar términos y condiciones</string>
    <string name="no_text"> </string>
    <string name="action_register">Registrar</string>
    <string name="not_firebase_auth">Ocirrio un problema. Intente más tarde</string>
    <string name="title_terms">Términos de servicio en "Mi Diario"</string>
    <string name="tag_text_primary_terms">Al utilizar Mi Diario, estás de acuerdo con los presentes términos de uso</string>
    <string name="text_terms">
        Es responsable del uso de los servicios por cualquier contenido que publique y
        de las consecuencias derivadas. El contenido que envíe, publique o muestre podrá
        ser visto por otros usuarios de los servicios a través de servicios y sitios web
        de terceros. Sólo deberá proporcionar el contenido que quiera compartir con otras
        personas en estos Términos.

        Tip: Lo que digas en Mi Diario se verá alrededor del mundo instantáneamente.
        ¡Eres lo que publicas!

        El usuario únicamente podrá hacer uso de estos servicios si acepta un contrato vinculante
        con Mi Diario como también a recibir dichos servicios según las leyes de México
        u otra jurisdicción aplicable.

        El usuario sólo podrá hacer uso de dichos Servicios conforme a
        dichas Condiciones como a toda ley, normativa o reglamento aplicable
        sea local, estatal, nacional o internacional.
    </string>
    <string name="tag_forget_pass">¿Olvidó su contraseña?</string>
    <string name="message_help_forget_pass">*Ingrese su email y de click al botón continuar </string>
    <string name="action_continue">Continuar</string>
    <string name="values">VALUES</string>
    <string name="theme">THEME</string>
    <string name="message_presione_otra_vez">Presione otra vez para salir!</string>
    <string name="message_utiliza_la_app">¡Hey utiliza Mi Diario, esta genial, ahi me puedes encontar ! https://play.google.com/store/apps/details?id=com.gismart.realpianofree</string>
    <string name="text_plain">text/plain</string>
    <string name="Share_with">Share with</string>
    <string name="Los_permisos_son_necesarios">Los permisos son necesarios para poder usar la aplicación</string>
    <string name="UUUps">UUUps!!!!!</string>
    <string name="Error">Error!!</string>
    <string name="carita">°_°</string>
    <string name="message_ocurrio_error">ocurio un error !</string>
    <string name="Tu_Estado_ha_sido_actualizado">Tú  Estado ha sido actualizado con exito!!!</string>
    <string name="portada">PORTADA</string>
    <string name="profile">PROFILE</string>
    <string name="action">Action</string>
    <string name="editar">Editar</string>
    <string name="personal">Personal</string>
    <string name="academia">Academica</string>
    <string name="social">Social</string>
    <string name="camara">Camara</string>
    <string name="galeria">Galeria</string>
    <string name="imageda">image/*</string>
    <string name="elija_opcion">Elija una opción</string>
    <string name="selecciona_app_imagen">Selecciona app de imagen</string>
    <string name="jpg">.jpg</string>
    <string name="file_path">file_path</string>
    <string name="ExternalStorage">ExternalStorage</string>
    <string name="Scanned">Scanned </string>
    <string name="uri">-> Uri = </string>
    <string name="provider">.provider</string>
    <string name="message_permisos_aceptados">Permisos aceptados</string>
    <string name="message_permisos_denegados">Permisos denegados</string>
    <string name="message_funciones">Para usar las funciones de la app necesitas aceptar los permisos</string>
    <string name="packge">package</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="navigation_drawer_title">didacticsonline.com</string>
    <string name="action_home">Inicio</string>
    <string name="action_publication">Publicación</string>
    <string name="action_settings">Ajustes</string>
    <string name="action_information">Información</string>
    <string name="action_profile">Acerca de mi</string>
    <string name="action_coach">Asesor</string>
    <string name="action_asesorado">Asesorado</string>
    <string name="action_friends">Amigos</string>
    <string name="action_share">Compartir</string>
    <string name="action_about">Nosotros</string>
    <string name="action_exit">Salir</string>
    <string name="message_welcome">Bienvenido a tu diario</string>
    <string name="GIDDET_link">http://www.giddet.psicol.unam.mx/</string>
    <string name="about_GIDDET">
        Los participantes que forman parte del Grupo de Investigación en Docencia,
        Diseño Educativo y TIC (GIDDET) tienen diversa experiencia y formación en el campo educativo, pero el común denominador
        que los reúne en este proyecto reside en la relevancia que otorgan al diseño tecnopedagógico de entornos educativos que
        conduzca a una transformación innovadora de los usos y las prácticas educativas mediadas por la tecnología.
        Con fundamento en la perspectiva socioconstructivista de los procesos de enseñanza y aprendizaje, las propuestas e
        investigaciones de los participantes del grupo se encaminan a promover la construcción conjunta del conocimiento,
        la literacidad crítica respecto a los usos de la tecnología, el trabajo colaborativo en torno a tareas auténticas basadas
        tanto en la discusión y apropiación crítica de los contenidos, como en la solución de casos y problemas situados en
        contextos reales.
        El grupo trabaja en colaboración con el Grupo de Investigación en Interacción e Influencia Educativa (GRINTIE),
        del Departamento de Psicología Evolutiva y de la Educación de la Universidad de Barcelona, coordinado por el Dr. César Coll
        y Alfonso Bustos.
        En este sitio encontrará información respecto al proyecto, sus participantes y la producción académica que han generado.
        </string>
    <string name="btnImagenG">Agregar imagen</string>
    <string name="txtInput_name_user">Cuenta</string>
    <string name="txtInput_password">Cree una contraseña</string>
    <string name="txtInput_name">Nombre</string>
    <string name="txtInput_gender">Género</string>
    <string name="txtInput_mail">Correo</string>
    <string name="txtInput_movil">Teléfono</string>
    <string name="txtInput_male">Masculino</string>
    <string name="txtInput_female">Femenino</string>
    <string name="btnAgree">Aceptar</string>
    <string name="btnDisagree">Cancelar</string>
    <string name="txtInput_school">Institución</string>
    <string name="txtInput_staff">Cargo</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="facebook_app_id">1788988017796346</string>
    <string name="fb_login_protocol_scheme">fb1788988017796346</string>
    <string name="action_save">Guardar</string>
    <string name="message_Oops">Oops!</string>
    <string name="message_Publication_Error">Publication Error!!</string>
    <string name="message_Conexion_a_Wifi">Tu Dispositivo tiene Conexion a Wifi.</string>
    <string name="message_Conexion_movil">Tu Dispositivo tiene Conexion Movil.</string>
    <string name="message_no_conexion_internet">"Tu Dispositivo no tiene Conexion a Internet.</string>
    <string name="message_Conexion_a_Internet">Conexion a Internet</string>
    <string name="pagina_del_dia">http://pagina-del-dia.euroresidentes.es/gadget-dia-de-hoyH.php?fondo=</string>
    <string name="salvar">SALVAR</string>
    <string name="download">DOWNLOAD</string>
    <string name="doc">DOC</string>
    <string name="mic">Mic</string>
    <string name="mas">MAS</string>
    <string name="ed">ed=</string>
    <string name="message_aceptar_acuerdo">Debe aceptar el acuerdo para proceder con el registro</string>
    <string name="formato">FORMATO</string>
    <string name="input_desc"> ¿Qué esta pasando?</string>
    <string name="input_sent">¿Qué estaba pensando y sintiendo?</string>
    <string name="input_eval">¿Qué es lo bueno y malo de esta experiencia?</string>
    <string name="input_analis">¿Qué sentido puede tener esta experiencia?</string>
    <string name="input_concl">¿Qué más podria haber hecho?</string>
    <string name="input_plan">¿Qué haria en una experiencia similar?</string>
    <string name="public_profile">public_profile</string>
    <string name="email">email</string>
    <string name="AccessToken.getCurrentAccessToken">AccessToken.getCurrentAccessToken()</string>
    <string name="Su_registro_realizo_con_Exito"> Su registro se realizo con Exito!!</string>
    <string name="cero">0000000000</string>
    <string name="id_name_email">id,name,email,gender,birthday</string>
    <string name="fields">fields</string>
    <string name="caritados">(*_*)----></string>
    <string name="Login_Failed">Login Failed</string>
    <string name="info_text">Necesitas tener creada una cuenta para iniciar la aplicación</string>
    <string name="crear_boton">CREAR CUENTA</string>
    <string name="nombre_input">Nombre</string>
    <string name="contrasena_input">Constraseña</string>
    <string name="recordar_check">Recordarme</string>
    <string name="olvidar_text">¿Olvidaste tu contraseña?</string>
    <string name="entrar_boton">Entrar</string>
    <string name="cliente_label">Cliente</string>
    <string name="action_team">Colaboración</string>
    <string name="action_play">Reproducir</string>
    <string name="action_stop">Stop</string>
    <string name="action_help">Ayuda</string>
    <string name="action_my_publication">Mis Publicaciones</string>
    <string name="action_pause">Pausar</string>
</resources>