<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/linearLayoutSettings"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:fitsSystemWindows="@bool/fitsSystemWindows"
    android:orientation="vertical"
    tools:context="com.dese.diario.Terms">


    <android.support.v7.widget.Toolbar
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:translationZ="4dp"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title_terms"
        android:gravity="center"
        style="@style/Base.DialogWindowTitle.AppCompat"/>
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="40dp"
        android:paddingRight="40dp">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/AlertDialog.AppCompat"
        android:layout_marginTop="12dp"
        android:layout_marginBottom="12dp"
        android:text="@string/tag_terms"
        android:textColor="@color/cardview_dark_background"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_terms"
        style="@style/AlertDialog.AppCompat"
        android:textAlignment="viewStart" />
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/logo_didactics"/>
    </LinearLayout>

</LinearLayout>
