<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_forget_password"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.dese.diario.ForgetPassword"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:translationZ="4dp"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar" />
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">
        <ImageView
            android:id="@+id/imgLogo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_logo_dp"
            android:layout_centerHorizontal="true"
            />
        <TextView
            android:id="@+id/tvMessagehelp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/tag_forget_pass"
            style="@android:style/Widget.TextView.PopupMenu" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_below="@+id/tvMessagehelp2"
            android:layout_alignParentStart="true"
            android:layout_marginTop="21dp">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/prompt_email"
                android:background="@drawable/edit_text_button_accent"
                android:drawableLeft="@drawable/ic_at"
                android:inputType="textEmailAddress" />

            <Button
            android:id="@+id/btnContinue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/action_continue"
            android:layout_below="@+id/tvMessagehelp2"
            android:background="?colorAccent"
            android:textColor="@color/md_white_1000"
            style="@style/RaisedButtom"
            android:layout_marginTop="20dp"/>
        </LinearLayout>

        <TextView
            android:id="@+id/tvMessagehelp2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/message_help_forget_pass"
            android:layout_below="@+id/tvMessagehelp"
            android:layout_alignParentStart="true" />


    </RelativeLayout>




</LinearLayout>
