<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/colorPrimary"
    android:orientation="vertical"
    android:scrollbarAlwaysDrawVerticalTrack="true">


    <ProgressBar
        android:id="@+id/login_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="48dp"
        android:layout_marginStart="150dp"
        android:layout_marginTop="180dp"
        android:visibility="gone"
         />

    <ScrollView
        android:layout_marginTop="16dp"
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:id="@+id/email_login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/login_title"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:layout_marginTop="70dp"
                android:background="@color/md_white_1000"
                android:elevation="4dp"
                android:orientation="vertical"
                android:padding="20dp">

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingTop="30dp"
                    android:weightSum="1"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentStart="true">

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <AutoCompleteTextView
                            android:id="@+id/tvEmail_Login"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:drawableLeft="@drawable/profileblack"
                            android:drawableTint="@color/colorPrimaryDark"
                            android:hint="@string/prompt_email"
                            android:inputType="textEmailAddress"
                            android:imeOptions="actionNext"
                            android:maxLines="1"/>
                    </android.support.design.widget.TextInputLayout>

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:passwordToggleEnabled = "true"
                        app:passwordToggleTint="@color/colorPrimaryDark">

                        <EditText
                            android:id="@+id/tvPassword_Login"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="16dp"
                            android:imeActionLabel="@string/action_sign_in"
                            android:imeOptions="actionUnspecified"
                            android:drawableLeft="@drawable/ic_lock_black_24dp"
                            android:drawableTint="@color/colorPrimaryDark"
                            android:hint="@string/prompt_password"
                            android:inputType="textPassword"
                            />

                    </android.support.design.widget.TextInputLayout>

                    <TextView
                        android:id="@+id/tvForgetPassword"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="right"
                        android:paddingTop="5dp"
                        android:text="@string/forget_password" />

                    <Button
                        android:id="@+id/email_sign_in_button"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="22dp"
                        android:background="@color/colorAccent"
                        android:text="@string/action_sign_in"
                        android:textAllCaps="false"
                        android:textColor="@color/md_text_white"
                        android:textSize="18sp" />


                </LinearLayout>
            </RelativeLayout>

            <ImageButton
                android:id="@+id/user_profile_photo"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_below="@+id/login_title"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="16dp"
                android:background="@drawable/user_profile_image_background"
                android:elevation="4dp"
                android:src="@drawable/estudiante"
                />

            <TextView
                android:id="@+id/login_title"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="18dp"
                android:gravity="center_horizontal"
                android:text="@string/title_login"
                android:textColor="@color/md_text_white"
                android:textSize="26sp"
                android:textStyle="bold"
                android:layout_alignParentTop="true"
                android:layout_alignParentStart="true" />
             <TextView
                android:id="@+id/failed_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorPrimaryDark"
                android:layout_margin="24dp"
                android:textSize="16sp"
                android:text="@string/no_text"/>
        </RelativeLayout>
    </ScrollView>
</RelativeLayout>